# SuspensionAccelerometer

./: .gitmodules  CMakeLists.txt  CMakeToolchain.txt  Makefile  README.md  STM32G441xBxx_FLASH.ld  STM32G473RETx_FLASH.ld  openocd.cfg
docker/: Dockerfile  entrypoint-linux.sh
scripts/: enter-docker.cmd  enter-docker.sh  flash.sh  setup.sh
src/: FreeRTOSConfig.h  core_config.h  stm32g4xx_hal_conf.h
src/app/: OutboardAccelerometers.c  OutboardAccelerometers.h  main.c
src/app/dbc/: accelerometer_dbc.dbc
src/driver/: can.c  can.h  clock.c  clock.h  gpio.c  gpio.h  i2c.c  i2c.h  interrupts.c  interrupts.h
